--- a/iOS_Aura/Base.lproj/Setup.storyboard
+++ b/iOS_Aura/Base.lproj/Setup.storyboard
@@ -36,23 +36,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zAE-cU-uTz">
-                                <rect key="frame" x="0.0" y="514" width="600" height="86"/>
+                                <rect key="frame" x="0.0" y="565" width="600" height="35"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="86" id="6CS-2j-av2"/>
+                                    <constraint firstAttribute="height" constant="35" id="6CS-2j-av2"/>
                                 </constraints>
                             </view>
                             <textView clipsSubviews="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="cyX-ev-TCC">
-                                <rect key="frame" x="0.0" y="393" width="600" height="113"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <rect key="frame" x="0.0" y="382" width="600" height="175"/>
+                                <color key="backgroundColor" red="0.96012723445892334" green="0.96009838581085205" blue="0.96011471748352051" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="113" id="l6c-y6-HxX"/>
+                                    <constraint firstAttribute="height" constant="175" id="l6c-y6-HxX"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="81" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kfe-cp-pfU">
-                                <rect key="frame" x="0.0" y="64" width="600" height="333"/>
+                                <rect key="frame" x="0.0" y="64" width="600" height="318"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SetupCellId" textLabel="azg-Ca-XmO" rowHeight="78" style="IBUITableViewCellStyleDefault" id="Cyj-UV-SpT">
@@ -77,11 +77,11 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="cyX-ev-TCC" firstAttribute="top" secondItem="kfe-cp-pfU" secondAttribute="bottom" id="1xp-ua-n6a"/>
                             <constraint firstItem="zAE-cU-uTz" firstAttribute="top" secondItem="cyX-ev-TCC" secondAttribute="bottom" constant="8" symbolic="YES" id="9wi-xj-aLs"/>
                             <constraint firstItem="kfe-cp-pfU" firstAttribute="leading" secondItem="cyX-ev-TCC" secondAttribute="leading" id="C8I-qn-e3N"/>
                             <constraint firstItem="zAE-cU-uTz" firstAttribute="width" secondItem="T9e-q3-27B" secondAttribute="width" id="Dm3-lU-JwJ"/>
                             <constraint firstItem="kfe-cp-pfU" firstAttribute="leading" secondItem="T9e-q3-27B" secondAttribute="leadingMargin" constant="-20" id="Ge6-nc-uYC"/>
-                            <constraint firstItem="zAE-cU-uTz" firstAttribute="top" secondItem="kfe-cp-pfU" secondAttribute="bottom" constant="117" id="HTU-NH-ftf"/>
                             <constraint firstItem="yD8-ak-AX5" firstAttribute="top" secondItem="zAE-cU-uTz" secondAttribute="bottom" id="NqC-2V-Ip6"/>
                             <constraint firstItem="zAE-cU-uTz" firstAttribute="leading" secondItem="T9e-q3-27B" secondAttribute="leadingMargin" constant="-20" id="XhR-G5-f3I"/>
                             <constraint firstItem="kfe-cp-pfU" firstAttribute="top" secondItem="u8Z-WZ-rcc" secondAttribute="bottom" id="iiG-WC-cJb"/>
